--- a/UT03/SR0303.md
+++ b/UT03/SR0303.md
@@ -57,7 +57,7 @@ El **espacio de nombres** en DNS es la estructura que define cómo los nombres d
   
 Un ejemplo de un FQDN sería `www.google.com.`. El punto final representa la raíz del árbol DNS, aunque en la práctica, a menudo se omite en las consultas normales.
 
-#### 3.2.4. Zonas DNS y Transferencias
+#### 3.2.4. Zonas DNS y Transferencias [+](./SR0303+.md)
 
 El espacio de nombres en DNS se divide en **zonas**, que son porciones del árbol DNS gestionadas por un servidor autoritativo. Una **zona** puede abarcar uno o varios subdominios.
 
