--- a/UT03/SR0304.md
+++ b/UT03/SR0304.md
@@ -3,14 +3,14 @@
 
 El **protocolo DNS** es esencial para la resolución de nombres de dominio a direcciones IP. Las consultas DNS permiten a los dispositivos obtener la información necesaria para comunicarse en la red sin que los usuarios tengan que recordar las complejas direcciones IP. Existen varios tipos de consultas y respuestas que dependen de la forma en que el servidor DNS maneja la solicitud.
 
-#### **4.1. Tipos de Consultas**
+#### **4.1. Tipos de Consultas** 
 
-##### **Consulta Recursiva**
+##### **Consulta Recursiva** [Relación con autoritivas](./SR0304+.md)
 En una consulta recursiva, el servidor DNS toma la responsabilidad de encontrar la respuesta completa para el cliente. Si no tiene la información, consulta a otros servidores DNS hasta obtener el resultado. El cliente DNS espera una respuesta completa o un error.
 
 - **Ejemplo**: Cuando un navegador necesita resolver `www.example.com`, el servidor DNS recursivo toma la responsabilidad de buscar la dirección IP si no la tiene almacenada.
 
-##### **Consulta Iterativa**
+##### **Consulta Iterativa** [Relación con autoritivas](./SR0304+.md)
 En una consulta iterativa, el servidor DNS responde con lo mejor que sabe. Si no tiene la respuesta final, devolverá una referencia a otro servidor DNS que pueda tener la información. El cliente DNS entonces sigue la cadena de servidores hasta resolver el nombre.
 
 - **Ejemplo**: Si el servidor DNS no puede resolver `www.example.com`, pero sabe que el servidor DNS para `example.com` puede tener la respuesta, lo indicará al cliente, quien debe hacer la siguiente consulta a ese servidor.
@@ -33,12 +33,12 @@ En una transferencia incremental, solo los cambios recientes desde la última ac
 
 Dependiendo de cómo se maneje la consulta, la respuesta del servidor DNS puede ser:
 
-##### **Respuesta Autoritativa**
+##### **Respuesta Autoritativa** [Relación con recursivas](./SR0304+.md)
 Una respuesta autoritativa es proporcionada por un servidor que gestiona directamente la zona en la que reside el dominio solicitado. La información proviene directamente de los datos gestionados por ese servidor, lo que garantiza que la respuesta es válida y actual.
 
 - **Ejemplo**: Si el servidor DNS responsable de la zona `example.com` responde a una consulta sobre `www.example.com`, esta es una respuesta autoritativa.
 
-##### **Respuesta No Autoritativa**
+##### **Respuesta No Autoritativa** [Relación con recursivas](./SR0304+.md)
 Una respuesta no autoritativa es proporcionada por un servidor que no gestiona directamente la zona, pero tiene la respuesta almacenada en su caché. Aunque la información puede estar actualizada, no se garantiza que sea la más reciente, ya que podría haber cambiado desde que se almacenó en la caché.
 
 - **Ejemplo**: Un servidor DNS que previamente consultó y almacenó la respuesta para `www.example.com` puede devolver una respuesta no autoritativa si la consulta se realiza nuevamente.
