Añadir enlace a incio

--- a/UT03/SR0302.md
+++ b/UT03/SR0302.md
@@ -1,3 +1,5 @@
+[DNS inicio](./SR03.md)
+
 ### **2. Sistemas de Nombres Planos**
 
 Los **sistemas de nombres planos** son una de las formas más sencillas de identificar dispositivos en una red. A diferencia de los sistemas jerárquicos como DNS, donde los nombres de dominio están estructurados en niveles, los nombres planos no tienen una estructura jerárquica. Esto significa que cada dispositivo en la red tiene un **nombre único** y el sistema simplemente asocia ese nombre con una dirección IP.
