--- a/UT03/SR0303+.md
+++ b/UT03/SR0303+.md
@@ -1,3 +1,5 @@
+[DNS 3](./SR0303.md)
+
 Cuando un servidor DNS recibe una consulta, sigue un proceso estructurado para intentar resolver el nombre de dominio solicitado. El orden en el que el servidor DNS intenta resolver la consulta es clave para entender cómo funciona el sistema. Siguiendo el flujo que mencionas, el proceso sería el siguiente:
 
 1. **Zonas primarias (zonas maestras)**: El servidor DNS primero consulta la información de sus zonas primarias. Estas son zonas sobre las cuales el servidor tiene control total y donde se almacenan los registros DNS de forma autoritativa. Las zonas primarias contienen la información más confiable y actual, ya que es la copia original de los registros DNS para ese dominio.
