--- a/UT03/SR0303.md
+++ b/UT03/SR0303.md
@@ -1,3 +1,5 @@
+[DNS inicio](./SR03.md)
+
 ### **3. Sistemas de Nombres Jerárquicos**
 
 A diferencia de los sistemas de nombres planos, los **sistemas de nombres jerárquicos** organizan los nombres de los dispositivos y recursos de manera estructurada, formando una jerarquía. Esta estructura facilita la gestión de nombres en redes de gran tamaño y ofrece una mayor flexibilidad y escalabilidad. El principal sistema de nombres jerárquico utilizado en Internet y en la mayoría de redes privadas es el **DNS (Domain Name System)**.
