--- a/UT03/SR0304+.md
+++ b/UT03/SR0304+.md
@@ -1,3 +1,5 @@
+[DNS 4](./SR0304.md)
+
 Una respuesta **autoritativa** es definitiva en el sentido de que proviene directamente del servidor que tiene autoridad sobre el dominio, por lo que **no requiere** ningún tipo de consulta adicional, sea recursiva o iterativa. Vamos a desglosar mejor esta relación que planteas para aclarar cómo se vinculan estos conceptos:
 
 ### Respuesta autoritativa: definitiva y concluyente
