--- a/UT03/SR0305.md
+++ b/UT03/SR0305.md
@@ -1,3 +1,5 @@
+[DNS inicio](./SR03.md)
+
 ### **5. Cliente DNS (Resolver)**
 
 El **cliente DNS** o **resolver** es un componente esencial del proceso de resolución de nombres. Su función principal es enviar consultas DNS en nombre de las aplicaciones o servicios que requieren la traducción de un nombre de dominio a una dirección IP o viceversa. Los resolvers están integrados en los sistemas operativos y funcionan de manera transparente para los usuarios.
