--- a/UT03/SR0307.md
+++ b/UT03/SR0307.md
@@ -1,3 +1,5 @@
+[DNS inicio](./SR03.md)
+
 ### **7. Registros DNS**
 
 Los **registros DNS** son elementos fundamentales dentro del sistema de resolución de nombres. Cada uno de estos registros proporciona información clave sobre la relación entre nombres de dominio y direcciones IP, así como otros datos necesarios para el funcionamiento y la administración de redes. Estos registros se almacenan en servidores autoritativos dentro de **zonas DNS** y están organizados en archivos de zona.
