--- a/UT03/SR0308.md
+++ b/UT03/SR0308.md
@@ -1,3 +1,5 @@
+[DNS inicio](./SR03.md)
+
 ### **8. Actualizaciones Dinámicas (DDNS)**
 
 El **DNS Dinámico (DDNS, Dynamic DNS)** es una extensión del sistema tradicional de nombres de dominio (DNS) que permite que los registros DNS se actualicen de manera automática y en tiempo real. Esto es particularmente útil en escenarios donde las direcciones IP de los dispositivos cambian con frecuencia, como sucede en redes que utilizan **DHCP (Dynamic Host Configuration Protocol)** para asignar direcciones IP de forma dinámica.
