--- a/UT03/SR0309.md
+++ b/UT03/SR0309.md
@@ -1,3 +1,5 @@
+[DNS inicio](./SR03.md)
+
 ### **9. DNS Seguro (DNSSEC)**
 
 El **DNSSEC (Domain Name System Security Extensions)** es un conjunto de extensiones del protocolo DNS que añade una capa de seguridad para proteger la integridad y autenticidad de las respuestas DNS. DNS, en su forma original, fue diseñado sin mecanismos de seguridad, lo que lo hace vulnerable a ataques como el **envenenamiento de caché** (cache poisoning) o **ataques de hombre en el medio** (man-in-the-middle), en los que un atacante puede interceptar y alterar las respuestas DNS. DNSSEC se introdujo para mitigar estos riesgos al garantizar que las respuestas DNS no hayan sido manipuladas.
