--- a/UT03/SR0310.md
+++ b/UT03/SR0310.md
@@ -1,3 +1,5 @@
+[DNS inicio](./SR03.md)
+
 ### **10. Cliente DNS (Resolver)**
 
 El **resolver DNS**, también conocido como **cliente DNS**, es el componente del sistema DNS que se encarga de gestionar las consultas DNS en nombre de los dispositivos de una red. Su principal función es hacer consultas a los servidores DNS para obtener la resolución de nombres de dominio a direcciones IP y viceversa. El resolver actúa como intermediario entre el dispositivo que necesita acceder a un recurso de red (por ejemplo, un navegador web) y los servidores DNS que contienen la información sobre las direcciones IP.
