Revisión general de los apuntes, marcados con ++ las ampliaciones opcionales

--- a/UT03/SR03.md
+++ b/UT03/SR03.md
@@ -1,5 +1,6 @@
 ## **Unidad de Trabajo 3: Servicios de Resolución de Nombres**
 
+Estos apuntes cuentan con ampliaciones [+]() que debes ver y con extras [++]() que son opcionales. 
 
 #### **1. Introducción** [+](./SR0301.md)
 
@@ -67,7 +68,7 @@ Para mantener la coherencia entre servidores, el contenido de las zonas se trans
 
 ---
 
-#### **6. Zonas de Resolución Directa e Inversa** [+](./SR0306.md)
+#### **6. Zonas de Resolución Directa e Inversa** [++](./SR0306.md)
 
 - **Resolución directa**: Traduce nombres DNS a direcciones IP.
 - **Resolución inversa**: Traduce direcciones IP a nombres DNS. Esto se implementa mediante zonas adicionales, usando el dominio `in-addr.arpa` para IPv4 y `ip6.arpa` para IPv6.
@@ -91,13 +92,13 @@ Los registros DNS tienen la siguiente estructura:
 
 ---
 
-#### **8. Actualizaciones Dinámicas (DDNS)** [+](./SR0308.md)
+#### **8. Actualizaciones Dinámicas (DDNS)** [++](./SR0308.md)
 
 El **DDNS (Dynamic DNS)** permite actualizar de manera dinámica los registros DNS cuando las direcciones IP de los dispositivos cambian, por ejemplo, cuando un servidor obtiene su IP de un servidor DHCP. Esto permite que el nombre de dominio siempre corresponda a la IP actual del dispositivo.
 
 ---
 
-#### **9. DNS Seguro (DNSSEC)** [+](./SR0309.md)
+#### **9. DNS Seguro (DNSSEC)** [++](./SR0309.md)
 
 **DNSSEC** añade una capa de seguridad al DNS, utilizando criptografía asimétrica para garantizar la autenticidad e integridad de los datos DNS. No todos los servidores soportan este estándar, por lo que su implementación debe ser cuidadosamente gestionada.
 
