--- a/UT03/SR0305.md
+++ b/UT03/SR0305.md
@@ -4,17 +4,29 @@
 
 En el sistema DNS (Domain Name System), existen distintos tipos de servidores que desempeñan funciones específicas dentro del proceso de resolución de nombres. Estos servidores trabajan en conjunto para garantizar que las consultas DNS se resuelvan de manera eficiente y precisa. A continuación, se detallan los principales tipos de servidores DNS.
 
-#### 1. Servidor Primario
+#### 1. Servidor Primario o maestro
 
-El servidor primario, también conocido como servidor maestro, es el servidor que tiene autoridad directa sobre una zona DNS específica. Este servidor contiene la base de datos original de registros DNS para esa zona y es el encargado de gestionar cualquier modificación en esos registros. Cuando se actualizan registros en una zona, estas actualizaciones se realizan en el servidor primario, que luego puede compartir la información actualizada con otros servidores secundarios. La autoridad del servidor primario es esencial para mantener la coherencia de los datos DNS.
+El servidor primario tiene autoridad directa sobre una zona DNS específica. Este servidor contiene la base de datos original de registros DNS para esa zona y es el encargado de gestionar cualquier modificación en esos registros.
 
-#### 2. Servidor Secundario
+Cuando se actualizan registros en una zona, estas actualizaciones se realizan en el servidor primario, que luego puede compartir la información actualizada con otros servidores secundarios.
 
-El servidor secundario, también denominado servidor esclavo, actúa como una copia de respaldo del servidor primario. Recibe una réplica de los registros DNS desde el servidor primario a través de un proceso conocido como transferencia de zona. Este servidor no realiza modificaciones en los registros; su función es proporcionar redundancia y disponibilidad en caso de que el servidor primario no esté accesible. Gracias a la replicación de datos, los servidores secundarios ayudan a reducir la carga en el servidor primario y mejoran la resiliencia del sistema DNS.
+La autoridad del servidor primario es esencial para mantener la coherencia de los datos DNS.
+
+#### 2. Servidor Secundario o esclavo
+
+El servidor secundario actúa como una copia de respaldo del servidor primario.
+
+Recibe una réplica de los registros DNS desde el servidor primario a través de un proceso conocido como [transferencia de zona](./SR0304.md#43-transferencias-de-zona). Este servidor no realiza modificaciones en los registros; su función es proporcionar redundancia y disponibilidad en caso de que el servidor primario no esté accesible.
+
+Gracias a la replicación de datos, los servidores secundarios ayudan a reducir la carga en el servidor primario y mejoran la resiliencia del sistema DNS.
 
 #### 3. Servidor Caché
 
-Un servidor caché almacena temporalmente las respuestas a las consultas DNS que ha procesado, para agilizar la resolución de nombres en el futuro. Cuando un servidor caché recibe una consulta DNS, primero verifica si tiene la respuesta en su caché. Si la tiene, devuelve la respuesta almacenada sin necesidad de realizar una nueva consulta al servidor primario o secundario, lo cual ahorra tiempo y recursos de red. Los servidores caché son esenciales para mejorar la velocidad de resolución y reducir el tráfico hacia otros servidores DNS.
+Un servidor caché almacena temporalmente las respuestas a las consultas DNS que ha procesado, para agilizar la resolución de nombres en el futuro.
+
+Cuando un servidor caché recibe una consulta DNS, primero verifica si tiene la respuesta en su caché. Si la tiene, devuelve la respuesta almacenada sin necesidad de realizar una nueva consulta al servidor primario o secundario, lo cual ahorra tiempo y recursos de red.
+
+Los servidores caché son esenciales para mejorar la velocidad de resolución y reducir el tráfico hacia otros servidores DNS.
 
 ### **5+. Tabla resumen.**
 
