--- a/UT03/SR0306.md
+++ b/UT03/SR0306.md
@@ -1,6 +1,6 @@
 [DNS inicio](./SR03.md)
 
-### **6. Zonas de Resolución Directa e Inversa**
+### **6. AMPLIACIÓN Zonas de Resolución Directa e Inversa**
 
 En el sistema DNS, los nombres de dominio se resuelven a direcciones IP y viceversa a través de zonas DNS. Estas zonas están gestionadas por servidores autoritativos, que son responsables de la exactitud de la información en una parte específica del espacio de nombres DNS. Existen dos tipos principales de zonas en el DNS: las **zonas de resolución directa** y las **zonas de resolución inversa**.
 
