--- a/UT03/SR0307.md
+++ b/UT03/SR0307.md
@@ -36,7 +36,7 @@ El registro **SOA** es el primer y más importante registro dentro de una zona D
 
 ##### **7.2.2. Registros A y AAAA**
 
-Estos registros son utilizados para mapear un nombre de dominio a una dirección IP. Son los registros más comunes en el DNS y se dividen en dos tipos:
+Estos registros son utilizados para mapear un nombre de dominio a una dirección IP. **Son los registros más comunes** en el DNS y se dividen en dos tipos:
 
 - **Registro A**: Asocia un nombre de dominio a una dirección **IPv4**. Ejemplo:
   ```bash
