--- a/UT03/SR0304.md
+++ b/UT03/SR0304.md
@@ -16,21 +16,7 @@ En una consulta iterativa, el servidor DNS responde con lo mejor que sabe. Si no
 
 - **Ejemplo**: Si el servidor DNS no puede resolver `www.example.com`, pero sabe que el servidor DNS para `example.com` puede tener la respuesta, lo indicará al cliente, quien debe hacer la siguiente consulta a ese servidor.
 
-#### **4.2. Transferencias de Zona**
-
-Una **zona DNS** es una parte del espacio de nombres gestionada por un servidor autoritativo. Para garantizar que los servidores DNS secundarios tengan la información más actualizada de la zona, se realiza una **transferencia de zona** desde el servidor primario.
-
-##### **Transferencia Completa (AXFR)**
-Una transferencia completa copia todos los registros de una zona desde el servidor primario al secundario. Este método se utiliza cuando un servidor secundario se establece por primera vez o cuando hay cambios significativos en la zona.
-
-- **Uso**: Transferencias completas son útiles al configurar un nuevo servidor DNS secundario o tras una actualización masiva.
-
-##### **Transferencia Incremental (IXFR)**
-En una transferencia incremental, solo los cambios recientes desde la última actualización se copian al servidor secundario. Esto reduce la cantidad de datos transferidos y mejora la eficiencia.
-
-- **Uso**: Utilizado en redes con cambios frecuentes para minimizar el tráfico y la carga en los servidores.
-
-#### **4.3. Tipos de Respuesta DNS**
+#### **4.2. Tipos de Respuesta DNS**
 
 Dependiendo de cómo se maneje la consulta, la respuesta del servidor DNS puede ser:
 
@@ -44,6 +30,22 @@ Una respuesta no autoritativa es proporcionada por un servidor que no gestiona d
 
 - **Ejemplo**: Un servidor DNS que previamente consultó y almacenó la respuesta para `www.example.com` puede devolver una respuesta no autoritativa si la consulta se realiza nuevamente.
 
+#### **4.3. Transferencias de Zona**
+
+Una **zona DNS** es una parte del espacio de nombres gestionada por un servidor autoritativo.
+
+Para garantizar que los servidores DNS secundarios tengan la información más actualizada de la zona, se realiza una **transferencia de zona** desde el servidor primario.
+
+##### **Transferencia Completa (AXFR)**
+Una transferencia completa copia todos los registros de una zona desde el servidor primario al secundario. Este método se utiliza cuando un servidor secundario se establece por primera vez o cuando hay cambios significativos en la zona.
+
+- **Uso**: Transferencias completas son útiles al configurar un nuevo servidor DNS secundario o tras una actualización masiva.
+
+##### **Transferencia Incremental (IXFR)**
+En una transferencia incremental, solo los cambios recientes desde la última actualización se copian al servidor secundario. Esto reduce la cantidad de datos transferidos y mejora la eficiencia.
+
+- **Uso**: Utilizado en redes con cambios frecuentes para minimizar el tráfico y la carga en los servidores.
+
 #### **4.4. Caché DNS**
 
 Para mejorar la eficiencia del sistema DNS y reducir la latencia, los servidores DNS y los resolvers suelen almacenar en caché las respuestas de consultas anteriores. La duración durante la cual una respuesta se almacena en caché está controlada por el campo **TTL (Time To Live)** en los registros DNS.
@@ -51,7 +53,7 @@ Para mejorar la eficiencia del sistema DNS y reducir la latencia, los servidores
 - **Ventajas**: El uso de caché reduce la carga en los servidores DNS y mejora el tiempo de respuesta para consultas repetidas.
 - **Limitaciones**: Si la información almacenada en caché ha caducado o ha cambiado desde la última consulta, es posible que las respuestas no sean precisas hasta que el caché se actualice.
 
-#### **4.5. Resolución Inversa**
+#### **4.5. Resolución Inversa**[++](./SR0306.md)
 
 La **resolución inversa** es el proceso de convertir una dirección IP en un nombre de dominio, lo opuesto a la resolución estándar. Esto se hace utilizando registros **PTR (Pointer)** en una zona especial del DNS: `in-addr.arpa` para direcciones IPv4 y `ip6.arpa` para direcciones IPv6.
 
