Añadir imágenes de wikimedia

--- a/UT03/SR03.md
+++ b/UT03/SR03.md
@@ -114,3 +114,7 @@ El **resolver** es el servicio que ejecuta consultas DNS a los servidores config
 - **host**: Otra herramienta para realizar consultas DNS, exclusiva de Unix/Linux.
 
 ---
+
+## MÁS INFORMACIÓN ##
+
+[WikiVersity: DNS what and how](https://en.wikiversity.org/wiki/User:Jane_Kruch/DNS:_what_is_it_and_how_it_works)
