--- a/UT03/SR0303.md
+++ b/UT03/SR0303.md
@@ -4,6 +4,8 @@
 
 A diferencia de los sistemas de nombres planos, los **sistemas de nombres jerárquicos** organizan los nombres de los dispositivos y recursos de manera estructurada, formando una jerarquía. Esta estructura facilita la gestión de nombres en redes de gran tamaño y ofrece una mayor flexibilidad y escalabilidad. El principal sistema de nombres jerárquico utilizado en Internet y en la mayoría de redes privadas es el **DNS (Domain Name System)**.
 
+![alt text](image.png) [Public Domain](https://commons.wikimedia.org/w/index.php?curid=387678)
+
 #### Características de los Sistemas de Nombres Jerárquicos:
 
 1. **Estructura jerárquica**: Los nombres en estos sistemas están organizados en varios niveles o jerarquías. Cada nivel representa un dominio o subdominio, formando una estructura de árbol invertido, en la que los nodos superiores son los más generales y los inferiores los más específicos.
@@ -43,6 +45,8 @@ DNS utiliza una estructura jerárquica y distribuida. El sistema se organiza com
 
 Cada dominio puede tener múltiples **subdominios**, que se gestionan de manera independiente. Por ejemplo, `google.com` es un subdominio de `.com`, y `mail.google.com` es un subdominio de `google.com`.
 
+<p><a href="https://commons.wikimedia.org/wiki/File:Structure_DNS.jpg#/media/File:Structure_DNS.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f2/Structure_DNS.jpg" alt="Structure DNS.jpg" height="873" width="1645"></a><br>By <a href="//commons.wikimedia.org/w/index.php?title=User:Jane_Kruch&amp;action=edit&amp;redlink=1" class="new" title="User:Jane Kruch (page does not exist)">Jane Kruch</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=30106365">Link</a></p>
+
 #### 3.2.3. Espacio de Nombres
 
 El **espacio de nombres** en DNS es la estructura que define cómo los nombres de dominio se organizan en niveles. Cada nombre de dominio completo se denomina **FQDN (Fully Qualified Domain Name)**. Un FQDN incluye:
@@ -50,6 +54,8 @@ El **espacio de nombres** en DNS es la estructura que define cómo los nombres d
 - **Nombre de dominio**: El nombre del dominio que aloja el recurso (por ejemplo, `google.com`).
   
 Un ejemplo de un FQDN sería `www.google.com.`. El punto final representa la raíz del árbol DNS, aunque en la práctica, a menudo se omite en las consultas normales.
+
+<a title="Jane Kruch, CC BY-SA 3.0 &lt;https://creativecommons.org/licenses/by-sa/3.0&gt;, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Name_schema.jpg"><img width="512" alt="Name schema" src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Name_schema.jpg?20131212000706"></a>
 
 #### 3.2.4. Zonas DNS y Transferencias [+](./SR0303+.md)
 
