--- a/UT03/SR0304.md
+++ b/UT03/SR0304.md
@@ -11,10 +11,14 @@ En una consulta recursiva, el servidor DNS toma la responsabilidad de encontrar 
 
 - **Ejemplo**: Cuando un navegador necesita resolver `www.example.com`, el servidor DNS recursivo toma la responsabilidad de buscar la dirección IP si no la tiene almacenada.
 
+<p><a href="https://commons.wikimedia.org/wiki/File:Recursive_queries_scheme.jpg#/media/File:Recursive_queries_scheme.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Recursive_queries_scheme.jpg" alt="Recursive queries scheme.jpg" height="830" width="649"></a><br>By <a href="//commons.wikimedia.org/w/index.php?title=User:Jane_Kruch&amp;action=edit&amp;redlink=1" class="new" title="User:Jane Kruch (page does not exist)">Jane Kruch</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=30114862">Link</a></p>
+
 ##### **Consulta Iterativa** [Relación con autoritivas](./SR0304+.md)
 En una consulta iterativa, el servidor DNS responde con lo mejor que sabe. Si no tiene la respuesta final, devolverá una referencia a otro servidor DNS que pueda tener la información. El cliente DNS entonces sigue la cadena de servidores hasta resolver el nombre.
 
 - **Ejemplo**: Si el servidor DNS no puede resolver `www.example.com`, pero sabe que el servidor DNS para `example.com` puede tener la respuesta, lo indicará al cliente, quien debe hacer la siguiente consulta a ese servidor.
+
+<p><a href="https://commons.wikimedia.org/wiki/File:Iterative_queries_scheme.jpg#/media/File:Iterative_queries_scheme.jpg"><img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Iterative_queries_scheme.jpg" alt="Iterative queries scheme.jpg" height="716" width="835"></a><br>By <a href="//commons.wikimedia.org/w/index.php?title=User:Jane_Kruch&amp;action=edit&amp;redlink=1" class="new" title="User:Jane Kruch (page does not exist)">Jane Kruch</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/3.0" title="Creative Commons Attribution-Share Alike 3.0">CC BY-SA 3.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=30114895">Link</a></p>
 
 #### **4.2. Tipos de Respuesta DNS**
 
@@ -77,4 +81,6 @@ En DNS, la **delegación** es el proceso mediante el cual una autoridad superior
 ### **4.7. Conclusión**
 
 Las consultas DNS, ya sean recursivas o iterativas, son fundamentales para la resolución de nombres en Internet. El protocolo DNS está diseñado para ser flexible y eficiente, permitiendo la resolución de millones de dominios de manera distribuida a través de la delegación y el uso de caché. Además, el manejo adecuado de las transferencias de zona y la seguridad proporcionada por DNSSEC garantizan que la infraestructura DNS sea robusta, escalable y confiable.
+
+<p><a href="https://commons.wikimedia.org/wiki/File:DNS_Architecture.svg#/media/File:DNS_Architecture.svg"><img src="https://upload.wikimedia.org/wikipedia/commons/6/60/DNS_Architecture.svg" alt="DNS Architecture.svg" height="187" width="512"></a><br>By <a href="//commons.wikimedia.org/w/index.php?title=User:EVhotrodder&amp;action=edit&amp;redlink=1" class="new" title="User:EVhotrodder (page does not exist)">Aaron Filbert</a> - <span class="int-own-work" lang="en">Own work</span>, <a href="https://creativecommons.org/licenses/by-sa/4.0" title="Creative Commons Attribution-Share Alike 4.0">CC BY-SA 4.0</a>, <a href="https://commons.wikimedia.org/w/index.php?curid=109489449">Link</a></p>
 
