Añado el punto de vista del cliente

--- a/UT03/SR0303+.md
+++ b/UT03/SR0303+.md
@@ -10,9 +10,39 @@ Cuando un **servidor DNS** recibe una consulta, sigue un proceso estructurado pa
 
 3. **Caché**: Si no se encuentra la respuesta ni en las zonas primarias ni en las secundarias, el servidor intenta resolver la consulta utilizando su caché. La caché almacena temporalmente las respuestas DNS anteriores que el servidor ha resuelto o consultado. Esta información tiene una duración limitada, determinada por el **TTL** (Time to Live), que indica cuánto tiempo puede mantenerse en caché antes de que expire. Si la respuesta que busca está en la caché y sigue siendo válida, el servidor la utilizará para resolver la consulta rápidamente, sin necesidad de realizar una nueva consulta a otros servidores.
 
-### Resumen del proceso:
-1. **Zonas primarias**: Se busca en las zonas donde el servidor es autoritativo (maestro).
-2. **Zonas secundarias**: Si no está en las zonas primarias, se revisan las zonas esclavas, que son copias de seguridad de las zonas primarias.
-3. **Caché**: Si no hay coincidencia en las zonas primarias ni secundarias, se revisa la caché, que puede tener respuestas previas a la misma consulta.
+Después de revisar zonas primarias, secundarias y la caché, **si el servidor DNS aún no puede resolver la consulta**, se da inicio a un proceso de consulta recursiva:
 
-Si la consulta no puede resolverse usando ninguno de estos métodos, el **servidor DNS** realizará una consulta recursiva a otros servidores DNS para intentar obtener la respuesta.
+4. **Consulta Recursiva a Otros Servidores DNS**:
+- Si el servidor no tiene la información solicitada localmente, actúa como un "cliente" y consulta otros servidores DNS.
+- Primero, contacta a uno de los **servidores raíz**. Estos servidores raíz contienen información sobre los servidores DNS autoritativos para cada dominio de nivel superior (como .com, .org, etc.).
+- Después de obtener una referencia del servidor raíz, el servidor DNS se dirige al **servidor DNS autoritativo del TLD** (dominio de nivel superior) para obtener más información.
+- Esta cadena continúa, redirigiendo de un servidor al siguiente, hasta llegar al servidor que tiene la información autoritativa sobre el dominio solicitado.
+
+### Consulta desde el cliente
+
+Exactamente, desde el punto de vista del cliente DNS, el proceso de resolución tiene un orden algo diferente, porque el cliente intentará primero resolver la consulta localmente antes de depender de cualquier servidor DNS externo. Veamos el proceso desde la perspectiva del cliente:
+
+1. **Caché Local del Sistema Operativo**:
+   - Cuando un cliente (es decir, un dispositivo o una aplicación que necesita resolver un nombre de dominio) necesita resolver un nombre de dominio, lo primero que hace es buscar en la **caché DNS local** del sistema operativo. Esta caché almacena respuestas a consultas anteriores y puede ahorrar mucho tiempo si la respuesta ya está ahí y no ha caducado.
+   
+2. **Archivo `hosts`**:
+   - Si la información no está en la caché local, el cliente busca en un archivo llamado **`hosts`** que está en el sistema operativo. Este archivo permite al cliente realizar asociaciones de nombres de dominio con direcciones IP de forma manual, lo cual puede ser útil para pruebas o configuraciones personalizadas.
+   
+3. **Servidor DNS Configurado**:
+   - Si no encuentra la información en la caché local ni en el archivo `hosts`, el cliente enviará una consulta al **servidor DNS configurado**. Este servidor puede ser un servidor DNS de la red local (como el de un router) o un servidor DNS público, como los proporcionados por Google (8.8.8.8) o Cloudflare (1.1.1.1). A partir de aquí, el servidor DNS llevará a cabo el proceso descrito anteriormente (primero zonas primarias, secundarias, caché, y finalmente consultas recursivas).
+  
+<br><hr>
+
+- **Desde el punto de vista del cliente, hay ciertas diferencias:**
+
+### Proceso de Resolución DNS desde el Cliente:
+
+1. **Caché Local**: El cliente consulta primero la caché del sistema operativo, buscando respuestas previas almacenadas.
+2. **Archivo `hosts`**: Luego revisa el archivo `hosts` para ver si hay una entrada correspondiente al dominio solicitado.
+3. **Servidor DNS Configurado**: Si no encuentra la respuesta localmente, envía la consulta al servidor DNS configurado.
+
+Este enfoque permite al cliente resolver nombres de dominio de la forma más eficiente posible. Si la caché tiene una entrada válida o si el archivo `hosts` tiene una asignación correspondiente, el proceso de resolución es prácticamente inmediato, sin necesidad de consultar servidores externos.
+
+La idea es siempre minimizar el tráfico de red y resolver los dominios lo más rápidamente posible. La combinación de estos mecanismos ayuda a optimizar la resolución DNS tanto para el cliente como para la red.
+
+¿Te gustaría que profundice en alguno de estos pasos o cómo configurarlos en un sistema operativo específico?
