Quitar comentario chatgpt

--- a/UT03/SR0304+.md
+++ b/UT03/SR0304+.md
@@ -20,8 +20,7 @@ La relación entre las respuestas no autoritativas y los métodos de consulta (r
 2. **Consulta iterativa → Respuesta no autoritativa (durante el proceso)**:
    En las consultas iterativas, un servidor DNS simplemente va obteniendo referencias a otros servidores DNS más cercanos a la autoridad. Estas respuestas son no autoritativas hasta que llegas al servidor autoritativo, que será el único en dar una respuesta definitiva.
 
-### La lógica de tu planteamiento
-Lo que dices tiene mucho sentido: **una respuesta autoritativa es una respuesta final**, y dado que no requiere más consultas a otros servidores DNS, no tiene sentido analizarla en términos de recursividad o iteración. Estas últimas solo son relevantes cuando se trata de obtener una respuesta desde servidores intermedios, es decir, en **respuestas no autoritativas**.
+ **Una respuesta autoritativa es una respuesta final**, y dado que no requiere más consultas a otros servidores DNS, no tiene sentido analizarla en términos de recursividad o iteración. Estas últimas solo son relevantes cuando se trata de obtener una respuesta desde servidores intermedios, es decir, en **respuestas no autoritativas**.
 
 ### Resumen clave:
 - **Respuestas autoritativas**: Siempre definitivas, concluyentes, y no dependen de consultas recursivas o iterativas.
