Aclaración zonas de resolución inversa

--- a/UT03/SR0306.md
+++ b/UT03/SR0306.md
@@ -1,6 +1,7 @@
 [DNS inicio](./SR03.md)
 
-### **6. AMPLIACIÓN Zonas de Resolución Directa e Inversa**
+**Aclaración del concepto de [zona](./SR030601.md)**
+### **6. AMPLIACIÓN Zonas de Resolución Directa e Inversa** 
 
 En el sistema DNS, los nombres de dominio se resuelven a direcciones IP y viceversa a través de zonas DNS. Estas zonas están gestionadas por servidores autoritativos, que son responsables de la exactitud de la información en una parte específica del espacio de nombres DNS. Existen dos tipos principales de zonas en el DNS: las **zonas de resolución directa** y las **zonas de resolución inversa**.
 
@@ -35,7 +36,7 @@ Imagina que un usuario desea acceder a `www.example.com`. El proceso de resoluci
 
 La **zona de resolución inversa** (o "reverse zone") realiza el proceso opuesto a la zona de resolución directa. En lugar de traducir un nombre de dominio a una dirección IP, la resolución inversa convierte una **dirección IP** en su **nombre de dominio** correspondiente. Este tipo de resolución es útil en varios contextos, como en la verificación de servidores de correo, registro de actividades y seguridad en redes.
 
-##### **Funcionamiento de la Resolución Inversa**
+##### **Funcionamiento de la Resolución Inversa** [++](./SR030602.md)
 
 1. **Consulta de la dirección IP**: Un cliente o servicio puede solicitar información sobre qué nombre de dominio está asociado con una dirección IP específica. Por ejemplo, `192.0.2.1`.
 2. **Respuesta del servidor DNS**: El servidor DNS autoritativo para la zona inversa recibe la consulta, busca el registro correspondiente y devuelve el nombre de dominio asociado, como `www.example.com`.
