Amplliación delegaciones, reenvíos

--- a/UT03/SR03.md
+++ b/UT03/SR03.md
@@ -52,11 +52,23 @@ Los nombres de dominio se representan como un árbol invertido, en el que:
 - **Recursiva**: El servidor DNS responde con el resultado completo o un error si no puede resolver la consulta.
 - **Iterativa**: El servidor responde con el resultado, un error, o una referencia a otro servidor DNS si no puede resolver la consulta directamente.
 
-##### 4.2. Transferencia de Zonas
+##### 4.2. Respuestas DNS
+
+-**Autoritaiva**
+-**No autoritativa**
+
+
+##### 4.3. Transferencia de Zonas
 
 Para mantener la coherencia entre servidores, el contenido de las zonas se transfiere de un servidor primario (maestro) a uno secundario (esclavo). Esto se hace mediante una **transferencia de zona**. Las transferencias pueden ser:
 - **Completas**: Copia total de la zona.
 - **Incrementales**: Sólo los cambios desde la última transferencia. Este método es más eficiente.
+
+##### 4.4. Caché DNS
+
+##### 4.5. Resolución Inversa
+
+##### 4.6. Delegación y Reenvío en DNS
 
 ---
 
