--- a/UT03/SR0304.md
+++ b/UT03/SR0304.md
@@ -64,7 +64,7 @@ La **resolución inversa** es el proceso de convertir una dirección IP en un no
 - **Uso**: La resolución inversa se utiliza en situaciones como registros de acceso de servidores y autenticación, donde se requiere conocer el nombre de dominio asociado a una dirección IP.
 - **Ejemplo**: Resolver la IP `192.0.2.1` en un nombre de dominio como `example.com`.
 
-#### **4.6. Delegación y Reenvío en DNS**
+#### **4.6. Delegación y Reenvío en DNS** [++](./SR030401.md)
 
 En DNS, la **delegación** es el proceso mediante el cual una autoridad superior (como un servidor de un dominio de nivel superior) delega la responsabilidad de resolver subdominios a servidores DNS autoritativos de una zona inferior.
 
