--- a/TAREAS/SR0402_ftp2/SR0402_ftp2.md
+++ b/TAREAS/SR0402_ftp2/SR0402_ftp2.md
@@ -18,7 +18,9 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
      - Habilitar "Autenticación Anónima" para permitir el acceso público limitado.
    - **1.3.** Generar las reglas de autorización:
      - Conceder **lectura y escritura** al usuario **AdminFTP**.
-     - Conceder **lectura** para usuarios anónimos (**Anonymous**).
+     - Conceder **lectura** para usuarios anónimos (**Todos los usuarios anónimos**).
+     - ![imagen](https://github.com/user-attachments/assets/8163eaea-2c47-4860-898c-d2616cf23878)
+
    - **1.4.** Configurar el número máximo de conexiones simultáneas a **50**.
 
 ## **2. Configurar Usuarios en el Administrador de Usuarios del Servidor**
