Solución del fallo intermitente "530: file system no permite el acceso

--- a/TAREAS/SR0402_ftp2/SR0402_ftp2.md
+++ b/TAREAS/SR0402_ftp2/SR0402_ftp2.md
@@ -11,22 +11,23 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
      - Crear una carpeta local llamada **INICIALES_NET** (donde INICIALES representa las iniciales del nombre del alumno).
      - Asignar la dirección IP **172.16.X.9** (donde **X** es el número de lista del alumno).
      - Utilizar el puerto **21** (el puerto predeterminado para FTP).
-     - Configurar un nombre de host virtual que permita identificar el sitio.
+     - Configurar un nombre de host virtual que permita identificar el sitio. (*ftp.iniciales.net*)
      - No configurar SSL para simplificar esta configuración de prueba.
    - **1.2.** Configurar la autenticación:
      - Habilitar "Autenticación Básica" para el usuario AdminFTP.
      - Habilitar "Autenticación Anónima" para permitir el acceso público limitado.
    - **1.3.** Generar las reglas de autorización:
      - Conceder **lectura y escritura** al usuario **AdminFTP**.
-     - Conceder **lectura** para usuarios anónimos (**Anonymous**).
+     - Conceder **lectura** para **Todos losusuarios anónimos:**
+     - ![alt text](image.png)
    - **1.4.** Configurar el número máximo de conexiones simultáneas a **50**.
 
 ## **2. Configurar Usuarios en el Administrador de Usuarios del Servidor**
-   - **2.1.** Crear el usuario **Anonymous** si no existe:
+   - **2.1.** (((Crear el usuario **Anonymous** si no existe:
      - Abrir "Administración de Equipos" y navegar hasta "Usuarios y grupos locales".
-     - Crear el usuario **Anonymous** si no está creado.
+     - Crear el usuario **Anonymous** si no está creado.)))
    - **2.2.** Asignar permisos completos a **AdminFTP** sobre la carpeta **INICIALES_NET**.
-   - **2.3.** Asignar permisos de **lectura y ejecución** al usuario **Anonymous** sobre la carpeta **INICIALES_NET**.
+   - **2.3.** Asignar permisos de **lectura y ejecución** al grupo de usuarios **Todos** sobre la carpeta **INICIALES_NET**.
 
 ## **3. Comprobar la Configuración con FileZilla**
    - **3.1.** Descargar e instalar el cliente FTP **FileZilla** en una máquina cliente.
