Ajustes en las capturas y en la forma de confirma que la conexión se ha realizado

--- a/TAREAS/SR0603_X11/SR0603_X11.md
+++ b/TAREAS/SR0603_X11/SR0603_X11.md
@@ -98,13 +98,18 @@ En esta práctica, los alumnos configurarán un servidor SSH en Ubuntu Desktop p
 #### 6.2 Verificar la ejecución en el servidor remoto
 - **Objetivo**: Confirmar que la aplicación gráfica está siendo ejecutada en el servidor remoto.
 - Pasos:
-  1. En el servidor remoto, usar el comando:
+  1. En el servidor, usar el comando:
+     ```bash
+     grep 'sshd' /var/log/auth.log
+     ```
+  4. Verificar que aparece una conexión desde la ip del cliente con el nombre del usuario utilizado.
+  3. En el servidor remoto, usar el comando:
      ```bash
      ps aux | grep xclock
      ```
-  2. Verificar que aparece un proceso relacionado con la aplicación ejecutada.
+  4. Verificar que aparece un proceso relacionado con la aplicación ejecutada.
 
-![alt text](z62.png)
+![alt text](image.png)
 
 ### (OPCIONAL) 7. Analizar el tráfico generado y su rendimiento en diferentes condiciones de red
 - **Objetivo**: Entender el impacto del reenvío X11 en el rendimiento de la red.
