Añado el apartado en el que se ejecuta un comando directamente en el servidor

--- a/TAREAS/SR0603_X11/SR0603_X11.md
+++ b/TAREAS/SR0603_X11/SR0603_X11.md
@@ -111,7 +111,21 @@ En esta práctica, los alumnos configurarán un servidor SSH en Ubuntu Desktop p
 
 ![alt text](image.png)
 
-### (OPCIONAL) 7. Analizar el tráfico generado y su rendimiento en diferentes condiciones de red
+### 7. Ejecutar comandos directamente, sin establecer conexión
+
+Es posible ejecutar comandos que actúen en el servidor directamente desde el cliente, sin necesidad de establecer una conexión.
+
+Para ello, utilizamos la siguiente sintaxis:
+
+   ```bash
+   ssh -X usuario@ipdelservidor comando
+
+   # ejemplo: (crea un directorio en el servidor)
+   
+   ssh -X miguel@172.100.50.25 mkdir 'NUEVO'   
+   ```
+
+### (OPCIONAL) 8. Analizar el tráfico generado y su rendimiento en diferentes condiciones de red
 - **Objetivo**: Entender el impacto del reenvío X11 en el rendimiento de la red.
 - Pasos:
   1. Usar herramientas como `iftop` o `nload` para analizar el tráfico generado:
@@ -121,7 +135,7 @@ En esta práctica, los alumnos configurarán un servidor SSH en Ubuntu Desktop p
      ```
   2. Cambiar la red a una conexión de baja velocidad (simulada) y repetir la prueba.
 
-### (OPCIONAL) 8. Deshabilitar el reenvío de X11 y comprobar que las aplicaciones gráficas dejan de funcionar
+### (OPCIONAL) 9. Deshabilitar el reenvío de X11 y comprobar que las aplicaciones gráficas dejan de funcionar
 - **Objetivo**: Validar el efecto de deshabilitar el reenvío X11 en SSH.
 - Pasos:
   1. *SERVIDOR:* Editar el archivo de configuración del servidor SSH:
