correccion faltaba cat en grep

--- a/TAREAS/SR0603_X11/SR0603_X11.md
+++ b/TAREAS/SR0603_X11/SR0603_X11.md
@@ -100,7 +100,7 @@ En esta práctica, los alumnos configurarán un servidor SSH en Ubuntu Desktop p
 - Pasos:
   1. En el servidor, usar el comando:
      ```bash
-     grep 'sshd' /var/log/auth.log
+     cat grep 'sshd' /var/log/auth.log
      ```
   4. Verificar que aparece una conexión desde la ip del cliente con el nombre del usuario utilizado.
   3. En el servidor remoto, usar el comando:
