Actualiza tareas 04FTP

--- a/TAREAS/SR0402_ftp2/SR0402_ftp2.md
+++ b/TAREAS/SR0402_ftp2/SR0402_ftp2.md
@@ -1,9 +1,11 @@
+- [**1. Crear un Nuevo Sitio FTP Virtual en IIS en Windows Server 2019**](#1-crear-un-nuevo-sitio-ftp-virtual-en-iis-en-windows-server-2019)
+- [**2. Configurar Usuarios en el Administrador de Usuarios del Servidor**](#2-configurar-usuarios-en-el-administrador-de-usuarios-del-servidor)
+- [**3. Comprobar la Configuración con FileZilla**](#3-comprobar-la-configuración-con-filezilla)
+
 **TAREA ESCENARIO 2: Configuración de un nuevo FTP Virtual en Windows Server 2019**
 
-## Objetivo:
+**Objetivo**:
 En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Windows Server 2019. Se aprenderá a crear un sitio FTP adicional, configurar autenticación básica y anónima, y comprobar el acceso utilizando el cliente FTP FileZilla.
-
-## Pasos a seguir:
 
 ## **1. Crear un Nuevo Sitio FTP Virtual en IIS en Windows Server 2019**
    - Abrir el "Administrador de IIS" y agregar un nuevo sitio FTP.
@@ -59,10 +61,10 @@ En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Wind
      - Localizar el archivo subido previamente y arrastrarlo a la parte izquierda (sistema local) para descargarlo.
      - Verificar en la ventana de registro que el archivo se ha descargado correctamente.
 
-## Consideraciones Adicionales:
+**Consideraciones Adicionales:**
 - **Seguridad**: La autenticación anónima debe ser limitada y controlada. En un entorno real, se debe restringir el acceso para evitar vulnerabilidades.
 - **Documentación**: Anotar cada paso realizado, incluyendo capturas de pantalla de la configuración y resultados de las pruebas con FileZilla.
 
-## Objetivo de Evaluación:
+**Objetivo de Evaluación:**
 - Verificar que los alumnos son capaces de crear un servidor FTP virtual adicional, gestionar los permisos de usuarios y configurar autenticaciones distintas, así como probar el acceso al servidor con usuarios diferentes mediante un cliente FTP.
 
