--- a/TAREAS/SR0402_ftp2/SR0402_ftp2.md
+++ b/TAREAS/SR0402_ftp2/SR0402_ftp2.md
@@ -1,8 +1,9 @@
-- [**1. Crear un Nuevo Sitio FTP Virtual en IIS en Windows Server 2019**](#1-crear-un-nuevo-sitio-ftp-virtual-en-iis-en-windows-server-2019)
-- [**2. Configurar Usuarios en el Administrador de Usuarios del Servidor**](#2-configurar-usuarios-en-el-administrador-de-usuarios-del-servidor)
-- [**3. Comprobar la Configuración con FileZilla**](#3-comprobar-la-configuración-con-filezilla)
+- [**SR0402 Práctica: Configuración de un nuevo FTP Virtual en Windows Server 2019**](#sr0402-práctica-configuración-de-un-nuevo-ftp-virtual-en-windows-server-2019)
+  - [**1. Crear un Nuevo Sitio FTP Virtual en IIS en Windows Server 2019**](#1-crear-un-nuevo-sitio-ftp-virtual-en-iis-en-windows-server-2019)
+  - [**2. Configurar Usuarios en el Administrador de Usuarios del Servidor**](#2-configurar-usuarios-en-el-administrador-de-usuarios-del-servidor)
+  - [**3. Comprobar la Configuración con FileZilla**](#3-comprobar-la-configuración-con-filezilla)
 
-**TAREA ESCENARIO 2: Configuración de un nuevo FTP Virtual en Windows Server 2019**
+# **SR0402 Práctica: Configuración de un nuevo FTP Virtual en Windows Server 2019**
 
 **Objetivo**:
 En esta tarea, los alumnos configurarán un segundo servidor FTP virtual en Windows Server 2019. Se aprenderá a crear un sitio FTP adicional, configurar autenticación básica y anónima, y comprobar el acceso utilizando el cliente FTP FileZilla.
